--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Usage:
 ------
 1.) Open super_rocket_ragdolls.exe
 2.) Press the "..." button
-3.) Locate Engine.dll in your installation directory
+3.) Locate Engine.dll in your Grim Dawn installation directory
 4.) Press the "Patch" button
 5.) Done! Load up the game and play
 
@@ -12,3 +12,6 @@ Q: Why does the executable ask for admin priviledges?
 A: This mod requires making changes to "Engine.dll", a file that is normally
 located in the Program Files directory which is write-protected from regular
 programs.
+
+Q: What if this mod corrupted Engine.dll?
+A: There should be a backup in the same folder called Engine.dll.bak
