Added licensing info to README

--- a/README
+++ b/README
@@ -16,6 +16,10 @@ programs.
 Q: What if Engine.dll becomes corrupted?
 A: There should be a backup in the same folder called Engine.dll.bak
 
+License:
+--------
+This project is released under the MIT License. See COPYING for more details.
+
 Thanks:
 -------
 Huge thanks to Bman for creating the original Super/Lesser Flying Bodies mod for Titan Quest. This entire project was inspired by their fantastic idea.
